# FAC

./: .gitignore  build.py  main.py  pyproject.toml  requirements.txt  sample.py  test.py  tree.md
application/: report_service.py
assets/: logos.py
config/: band_mapping.json  kpi_config.json  settings.py
data/: loader.py  transformer.py
domain/: kpi_calculator.py  kpi_targets.py  models.py
gui/: main_window.py
infrastructure/: csv_parser.py  excel_writer.py
kpi/: calculator.py  validator.py
models/: column_enums.py
report/: chart_generator.py  excel_writer.py  formatter.py  summary_writer.py
services/: chart_generator.py  data_loader.py  data_processor.py  kpi_calculator.py  report_generator.py
ui/: main_window.py  styles.py
utils/: helpers.py  validators.py
visualization/: chart_generator.py
