[project]
name = "fac"
version = "1.0.0"
description = "FAC Report Gen"
authors = [
    {name = "daiyabarus",email = "daiyabarus@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyqt6 (>=6.10.1,<7.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "xlsxwriter (>=3.2.9,<4.0.0)",
    "ruff (>=0.14.9,<0.15.0)",
    "isort (>=7.0.0,<8.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "xlrd (>=2.0.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
